# profile-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  webapp-deployment.yaml  webapp-service.yaml
.github/workflows/: deployment.yml
deployment/: namespace.yaml  webapp-deployment.yaml  webapp-service.yaml
